data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3763.wast
;; 2. **Test Description**: Invoke a function with a `call` instruction immediately followed by a `br_table` where the index is out-of-bounds (negative or beyond available targets). The `call` function type should trigger an edge case on return; ensure that the `br_table` correctly traps.    - **Reasoning**: Verifies both the `call` instruction handling in wizard_engine and the correct trapping mechanism on invalid indices in `br_table`.

(assert_invalid
  (module
    (func $call-br_table (call 1) (br_table 0 1 -1))
    (func (param i32) (result i32) (i32.add (local.get 0) (i32.const 1)))
  )
  "invalid br_table index"
)